# qrshare

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  Rocket.toml  example.py  requirements.txt  setup.py
.github/workflows/: python-publish.yml
qrshare/: __init__.py  __main__.py  app.py  auth.py  handlers.py  network.py  qr.py  search.py  shortcut.py  template.py
qrshare/client/: README.md  package.json  rollup.config.js
qrshare/client/public/: error.css  error.html  error.jinja2  global.css  index.html  index.jinja2  login.html  skeleton.css
qrshare/client/src/: App.svelte  events.js  ex.js  login.js  main.js  request.js  routes.js  store.js
qrshare/config/: __init__.py  base.py  user.py
qrshare/models/: __init__.py  qrcontainer.py  route.py  zip.py
qrshare/static/: main.css  main.js
qrshare/templates/: base.html  error.html  login.html  main.html  shared.html
qrshare/tools/: __init__.py
src/: auth.rs  cli.rs  endpoints.rs  filesystem.rs  forms.rs  main.rs  state.rs
src/context/: base.rs  login.rs  mod.rs
src/endpoint/: archive.rs  file.rs  file_server.rs  home.rs  host.rs  ip.rs  login.rs  mod.rs  path.rs
src/endpoints/: index_endpoint.rs  mod.rs
src/guard/: auth.rs  mod.rs  relative_path.rs
src/models/: mimetype.rs
src/state/: config.rs  filesystem.rs  mod.rs
src/utils/: archive.rs  dir.rs  mod.rs
static/css/: login.css  style.css
static/js/: script.js
templates/: index.html.tera  login.html.tera  path.html.tera
templates/base/: base.html.tera
templates/components/: nav.html.tera
templates/macros/: render.html.tera
(+137 files in other folders)
