[package]
name = "qrshare"
version = "0.5.0"
edition = "2021"
authors = ["Mensch272 <mensch.luge@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "c028d63" }

[dependencies.rocket_dyn_templates]
git = "https://github.com/SergioBenitez/Rocket"
rev = "c028d63"
features = ["tera"]